force-app/main/default/objects/blng__CreditNoteLine__c/blng__CreditNoteLine__c.object-meta.xml
<CustomObject>
    <label>Credit Note Line</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>