force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__Balance__c.field-meta.xml
<CustomField>
    <fullName>blng__Balance__c</fullName>
    <formula>blng__TotalAmount__c - blng__Allocations__c + blng__Unallocations__c -  blng__Refunds__c - blng__Debits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount that has not yet been allocated</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>