force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__BillingGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Credit Note Lines</relationshipLabel>
    <relationshipName>BillingGLTreatmentCreditNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>