force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>blng__BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Note Lines</relationshipLabel>
    <relationshipName>BillToAccountCreditNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>