force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__BillToContact__c.field-meta.xml
<CustomField>
    <fullName>blng__BillToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Note Lines</relationshipLabel>
    <relationshipName>BillToContactCreditNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>