force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__CalculateTax__c.field-meta.xml
<CustomField>
    <fullName>blng__CalculateTax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Tax?</label>
    <type>Checkbox</type>
</CustomField>