force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__CreditNote__c.field-meta.xml
<CustomField>
    <fullName>blng__CreditNote__c</fullName>
    <label>Credit Note</label>
    <referenceTo>blng__CreditNote__c</referenceTo>
    <relationshipName>CreditNoteCreditLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>