force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__CreditNoteLineDate__c.field-meta.xml
<CustomField>
    <fullName>blng__CreditNoteLineDate__c</fullName>
    <label>Credit Note Line Date</label>
    <type>Date</type>
</CustomField>