force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__EffectiveTaxDate__c.field-meta.xml
<CustomField>
    <fullName>blng__EffectiveTaxDate__c</fullName>
    <label>Effective Tax Date</label>
    <type>Date</type>
</CustomField>