force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__FinancePeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__FinancePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>Credit Note Lines</relationshipLabel>
    <relationshipName>FinancePeriodCreditNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>