force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Draft Invoice Lines would not be available</errorMessage>
        <filterItems>
            <field>blng__InvoiceLine__c.blng__InvoiceLineStatus__c</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </filterItems>
        <infoMessage>Draft Invoice Lines would not be available</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>Credit Note Lines</relationshipLabel>
    <relationshipName>InvoiceLineCreditNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>