force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__NetAllocations__c.field-meta.xml
<CustomField>
    <fullName>blng__NetAllocations__c</fullName>
    <formula>blng__Allocations__c  -  blng__Unallocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>