force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__ProductName__c.field-meta.xml
<CustomField>
    <fullName>blng__ProductName__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>