force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__RefundsUnallocations__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundsUnallocations__c</fullName>
    <inlineHelpText>Amount of this that has been unallocated from refunds</inlineHelpText>
    <label>Refunds (Unallocations)</label>
    <summarizedField>blng__RefundLineCreditNoteLine__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__RefundLineCreditNoteLine__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Unallocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__RefundLineCreditNoteLine__c.blng__CreditNoteLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>