force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__StartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__StartDate__c</fullName>
    <inlineHelpText>Start date of the credit line term</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>