force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>blng__Subtotal__c</fullName>
    <inlineHelpText>Unrefunded amount of the credit note. Does not include tax. Equals Amount - Refund Amount</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>