force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxAmount__c</fullName>
    <inlineHelpText>Tax amount on this line</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>