force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxCode__c</fullName>
    <inlineHelpText>Tax Code assigned to this line.</inlineHelpText>
    <label>Tax Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>