force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxCountry__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxCountry__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
    <label>Tax Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>