force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxGLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Credit Note Lines (Tax GL Rule)</relationshipLabel>
    <relationshipName>TaxGLRuleCreditNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>