force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Credit Note Lines (Tax GL Treatment)</relationshipLabel>
    <relationshipName>TaxGLTreatmentCreditNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>