force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxPercentageApplied__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxPercentageApplied__c</fullName>
    <label>Tax Percentage Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>