force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxStatus__c</fullName>
    <inlineHelpText>Status of tax calculation. Can be: Pending In Process Completed Canceled Error</inlineHelpText>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__LineTaxStatus</valueSetName>
    </valueSet>
</CustomField>