force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxZipCode__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxZipCode__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
    <label>Tax Zip Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>