force-app/main/default/objects/blng__CreditNoteLine__c/fields/blng__Unallocations__c.field-meta.xml
<CustomField>
    <fullName>blng__Unallocations__c</fullName>
    <inlineHelpText>Amount of this line that has been unallocated from invoices.</inlineHelpText>
    <label>Unallocations</label>
    <summarizedField>blng__CreditNoteAllocation__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__CreditNoteAllocation__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Unallocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__CreditNoteAllocation__c.blng__CreditNoteLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>